--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <!-- TODO: Add loader globally -->
 <p class="text-2xl text-gray-600 mx-auto">
-  Welcome to my Angular - Tailwind template
+  Welcome to my Angular - {{ title }}
 </p>
 <router-outlet></router-outlet>
