--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,60 +1,164 @@
-@use '~@angular/material/theming' as mat;
+@use "~@angular/material/theming" as mat;
 
 :root {
-   --primary-50: #cd1717;
-   --primary-100: '';
-   --primary-200: '';
-   --primary-300: '';
-   --primary-400: '';
-   --primary-500: '';
-   --primary-600: '';
-   --primary-800: '';
-   --primary-900: '';
-   --primary-a100: '';
-   --primary-a200: '';
-   --primary-a400: '';
-   --primary-a700: '';
+   --primary-50: #edebfc;
+   --primary-100: #d3cef8;
+   --primary-200: #b6aef3;
+   --primary-300: #988dee;
+   --primary-400: #8274eb;
+   --primary-500: #6c5ce7;
+   --primary-600: #6454e4;
+   --primary-700: #594ae0;
+   --primary-800: #4f41dd;
+   --primary-900: #3d30d7;
+   --primary-a100: #ffffff;
+   --primary-a200: #e9e7ff;
+   --primary-a400: #b9b4ff;
+   --primary-a700: #a29bff;
 
-  --accent-50: #002;
-  --accent-100: '';
-  --accent-200: '';
-  --accent-300: '';
-  --accent-400: '';
-  --accent-500: '';
-  --accent-600: '';
-  --accent-800: '';
-  --accent-900: '';
-  --accent-a100: '';
-  --accent-a200: '';
-  --accent-a400: '';
-  --accent-a700: '';
+  --accent-50: #fae6e6;
+  --accent-100: #f3c1c1;
+  --accent-200: #eb9898;
+  --accent-300: #e26e6f;
+  --accent-400: #dc4f50;
+  --accent-500: #d63031;
+  --accent-600: #d12b2c;
+  --accent-700: #cc2425;
+  --accent-800: #c61e1f;
+  --accent-900: #bc1313;
+  --accent-a100: #ffecec;
+  --accent-a200: #ffb9b9;
+  --accent-a400: #ff8686;
+  --accent-a700: #ff6d6d;
 
-  --warn-50: '';
-  --warn-100: '';
-  --warn-200: '';
-  --warn-300: '';
-  --warn-400: '';
-  --warn-500: '';
-  --warn-600: '';
-  --warn-800: '';
-  --warn-900: '';
-  --warn-a100: '';
-  --warn-a200: '';
-  --warn-a400: '';
-  --warn-a700: '';
+  --warn-50: #ffe9eb ;
+  --warn-100: #ffc8cb;
+  --warn-200: #f7928c;
+  --warn-300: #ee6660;
+  --warn-400: #f73e35;
+  --warn-500: #fa250b;
+  --warn-600: #ec1010;
+  --warn-700: #da000b;
+  --warn-800: #ce0001;
+  --warn-900: #c00000;
+  --warn-a100: #ffecec;
+  --warn-a200: #ffb9b9;
+  --warn-a400: #ff8686;
+  --warn-a700: #ff6d6d;
 
-  --contrast-50: #f30707;
-  --contrast-100: '';
-  --contrast-200: '';
-  --contrast-300: '';
-  --contrast-400: '';
-  --contrast-500: '';
-  --contrast-600: '';
-  --contrast-800: '';
-  --contrast-900: '';
-  --contrast-a100: '';
-  --contrast-a200: '';
-  --contrast-a400: '';
-  --contrast-a700: '';
+  --contrast-50: #000000;
+  --contrast-100: #000000;
+  --contrast-200: #000000;
+  --contrast-300: #000000;
+  --contrast-400: #000000;
+  --contrast-500: #ffffff;
+  --contrast-600: #ffffff;
+  --contrast-700: #ffffff;
+  --contrast-800: #ffffff;
+  --contrast-900: #ffffff;
+  --contrast-a100: #000000;
+  --contrast-a200: #000000;
+  --contrast-a400: #000000;
+  --contrast-a700: #000000;
 }
+
+// Material palettes
+$custom-primary-color: (
+  50 : var(--primary-50),
+  100 : var(--primary-100),
+  200 : var(--primary-200),
+  300 : var(--primary-300),
+  400 : var(--primary-400),
+  500 : var(--primary-500),
+  600 : var(--primary-600),
+  700 : var(--primary-700),
+  800 : var(--primary-800),
+  900 : var(--primary-900),
+  A100 : var(--primary-a100),
+  A200 : var(--primary-a200),
+  A400 : var(--primary-a400),
+  A700 : var(--primary-a700),
+  contrast: (
+    50 : var(--contrast-50),
+    100 : var(--contrast-100),
+    200 : var(--contrast-200),
+    300 : var(--contrast-300),
+    400 : var(--contrast-400),
+    500 : var(--contrast-500),
+    600 : var(--contrast-600),
+    700 : var(--contrast-700),
+    800 : var(--contrast-800),
+    900 : var(--contrast-900),
+    A100 : var(--contrast-a100),
+    A200 : var(--contrast-a200),
+    A400 : var(--contrast-a400),
+    A700 : var(--contrast-a700),
+  )
+);
+
+$custom-accent-color: (
+  50 : var(--accent-50),
+  100 : var(--accent-100),
+  200 : var(--accent-200),
+  300 : var(--accent-300),
+  400 : var(--accent-400),
+  500 : var(--accent-500),
+  600 : var(--accent-600),
+  700 : var(--accent-700),
+  800 : var(--accent-800),
+  900 : var(--accent-900),
+  A100 : var(--accent-a100),
+  A200 : var(--accent-a200),
+  A400 : var(--accent-a400),
+  A700 : var(--accent-a700),
+  contrast: (
+    50 : var(--contrast-50),
+    100 : var(--contrast-100),
+    200 : var(--contrast-200),
+    300 : var(--contrast-300),
+    400 : var(--contrast-400),
+    500 : var(--contrast-500),
+    600 : var(--contrast-600),
+    700 : var(--contrast-700),
+    800 : var(--contrast-800),
+    900 : var(--contrast-900),
+    A100 : var(--contrast-a100),
+    A200 : var(--contrast-a200),
+    A400 : var(--contrast-a400),
+    A700 : var(--contrast-a700),
+  )
+);
+
+$custom-warn-color: (
+  50 : var(--warn-50),
+  100 : var(--warn-100),
+  200 : var(--warn-200),
+  300 : var(--warn-300),
+  400 : var(--warn-400),
+  500 : var(--warn-500),
+  600 : var(--warn-600),
+  700 : var(--warn-700),
+  800 : var(--warn-800),
+  900 : var(--warn-900),
+  A100 : var(--accent-a100),
+  A200 : var(--accent-a200),
+  A400 : var(--accent-a400),
+  A700 : var(--accent-a700),
+  contrast: (
+    50 : var(--contrast-50),
+    100 : var(--contrast-100),
+    200 : var(--contrast-200),
+    300 : var(--contrast-300),
+    400 : var(--contrast-400),
+    500 : var(--contrast-500),
+    600 : var(--contrast-600),
+    700 : var(--contrast-700),
+    800 : var(--contrast-800),
+    900 : var(--contrast-900),
+    A100 : var(--contrast-a100),
+    A200 : var(--contrast-a200),
+    A400 : var(--contrast-a400),
+    A700 : var(--contrast-a700),
+  )
+);
 
