--- a/src/assets/scss/material-custom.scss
+++ b/src/assets/scss/material-custom.scss
@@ -1,10 +1,11 @@
+@use "tailwind";
+@import "variables";
 @import '~@angular/material/theming';
-
 @include mat-core();
-$ng-material-tailwind-primary: mat-palette($mat-indigo);
-$ng-material-tailwind-accent: mat-palette($mat-pink, A200, A100, A400);
 
-$ng-material-tailwind-warn: mat-palette($mat-red);
+$ng-material-tailwind-primary: mat-palette($custom-primary-color);
+$ng-material-tailwind-accent: mat-palette($custom-accent-color, A200, A100, A400);
+$ng-material-tailwind-warn: mat-palette($custom-warn-color);
 
 $ng-material-tailwind-theme: mat-light-theme((
   color: (
