--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <!-- TODO: Add loader globally -->
-<p class="text-2xl text-gray-600 mx-auto text-primary-A700">
-  Welcome to my Angular - {{ title }}
-</p>
-<p>
-  <button mat-raised-button color="primary" >Hello world</button>
-</p>
-<router-outlet></router-outlet>
+<div class="container mx-auto pt-10">
+  <p class="text-2xl text-gray-600 mx-auto text-primary-A700">
+    Welcome to my Angular - {{ title }}
+  </p>
+  <p>
+    <button mat-raised-button color="primary" >Hello world</button>
+  </p>
+  <router-outlet></router-outlet>
+</div>
