--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <!-- TODO: Add loader globally -->
+<app-loading></app-loading>
 <p class="text-2xl text-gray-600 mx-auto">
   Welcome to my Angular - {{ title }}
 </p>
