feat(loading): Add loading complete feature in the project

--- a/src/app/core/layouts/components/loading/loading.component.html
+++ b/src/app/core/layouts/components/loading/loading.component.html
@@ -1,5 +1,6 @@
-<div class="flex absolute h-full w-full left-0 top-0 overflow-hidden p-4" [ngClass]="getClasses()">
+<div *ngIf="isLoading$ | async" class="flex absolute h-full w-full left-0 top-0 overflow-hidden p-4" [ngClass]="getClasses()">
   <div class="text-center flex items-center space-x-2">
-    <mat-spinner class="" [diameter]="config.defaultConfig.diameter" [color]="config.defaultConfig.color"></mat-spinner> <span>loading</span>
+    <mat-spinner class="" [diameter]="config.defaultConfig.diameter" [color]="config.defaultConfig.color"></mat-spinner>
+    <span *ngIf="message">{{message}}</span>
   </div>
 </div>
