--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,12 @@
 <p class="text-2xl text-gray-600 mx-auto">
   Welcome to my Angular - {{ title }}
 </p>
+
+
+<div class="space-x-5">
+  <button mat-raised-button color="primary" (click)="showLoader()">Show loader</button>
+  <button mat-raised-button color="primary" (click)="showLoaderMessage()">Show with message</button>
+  <button mat-raised-button color="primary" (click)="showLoaderNoMessage()">Show with no message</button>
+
+</div>
 <router-outlet></router-outlet>
