--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,16 @@
 <!-- TODO: Add loader globally -->
 <app-loading></app-loading>
-<p class="text-2xl text-gray-600 mx-auto">
-  Welcome to my Angular - {{ title }}
-</p>
+<div class="container mx-auto pt-8">
+  <p class="text-2xl text-gray-600 mx-auto">
+    Welcome to my Angular - {{ title }}
+  </p>
 
+  <div class="space-x-5">
+    <button mat-raised-button color="primary" (click)="showLoader()">Show loader</button>
+    <button mat-raised-button color="primary" (click)="showLoaderBackDrop()">Show loader with backdrop - bigger</button>
+    <button mat-raised-button color="primary" (click)="showLoaderMessage()">Show with message</button>
+    <button mat-raised-button color="primary" (click)="showLoaderNoMessage()">Show with no message</button>
 
-<div class="space-x-5">
-  <button mat-raised-button color="primary" (click)="showLoader()">Show loader</button>
-  <button mat-raised-button color="primary" (click)="showLoaderMessage()">Show with message</button>
-  <button mat-raised-button color="primary" (click)="showLoaderNoMessage()">Show with no message</button>
-
+  </div>
+  <router-outlet></router-outlet>
 </div>
-<router-outlet></router-outlet>
